--- a/index.html
+++ b/index.html
@@ -4,12 +4,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/style/style.css">
     <script src="assets/scripts/script.js" defer></script>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>Portfolio</title>
 </head>
 <body>
-    
+
+    <header>
+        <img class="logo" src="assets/media/1.jpg" alt="dawn logo">
+        <nav>
+            <ul class="nav-links">
+                <li><a href="assets/multi-pages/about.html" target="_blank" ><span class="about">About</span></a></li>
+                <li><a href="#"><span class="project">Projects</span></a></li>
+                <li><a href="#"><span class="resume">Resume</span></a></li>
+            </ul>
+        </nav>
+        <!-- <a href="#" class="contact"><button>contact</button></a> -->
+    </header>
+    <main>
+        <section class="hidden">
+            <article>
+                <p class="intro">
+                    <sapn class="greeting">Hello! Welcome To My Portfolio.</span>
+                        
+                    </p>
+                </article>
+            </section>
+            <section class="hidden">
+                <span class="greeting">My Name is,  <span class="name-top">Nebiy Negash</span> ,  I am <span class="jwd">a Junior Web Developer</span>
+            </span>
+        </section>
+        </main>
+        <footer>
+            <section>
+                <nav>
+                    <ul class="nav-links">
+                        <li><a href="assets/multi-pages/about.html" target="_blank" ><span class="about">About</span></a></li>
+                        <li><a href="#"><span class="project">Projects</span></a></li>
+                        <li><a href="#"><span class="resume">Resume</span></a></li>
+                    </ul>
+                </nav>
+            </section>
+        </footer>
+
+
 </body>
 </html>
+
